--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,5 +24,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PQ'
 - !lcsh 'Camões, Luís de, 1524?-1580 -- Criticism and interpretation'
+- GITenberg
 title: Camões e a Fisionomia Espiritual da Pátria
 url: http://www.gutenberg.org/ebooks/32789
